# lspace

./: .gitmodules  CMakeLists.txt
android/: .gitignore
android/jni/: SDL  SDL_image
android/jni/src/: Android.mk
android/src/org/libsdl/app/: SDLActivity.java
client/: CMakeLists.txt
client/include/: main.h  main.hpp  stage.h  stage_game.h
client/src/: main.c  main.cpp  stage.c  stage_game.c
common/: CMakeLists.txt
common/include/: example.h
common/src/: example.c
include/: camera.h  chunk.h  common.h  engine.h  eventcode.h  main.h  stage.h  stage_game.h  tile.h
lib/: CMakeLists.txt
server/src/: main.c
src/: camera.c  common.c  engine.c  main.c  stage.c  stage_game.c
